k8s/clusters/homelabk8s01/infrastructure/network-policies/arr.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: arr-default-deny
  namespace: arr
spec:
  endpointSelector: {}
  ingressDeny:
    - fromEntities:
        - world
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: arr-allow-gateway
  namespace: arr
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - ingress
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: arr-allow-internal
  namespace: arr
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: arr
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: arr-allow-monitoring
  namespace: arr
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: arr-allow-openclaw
  namespace: arr
spec:
  description: "Allow OpenClaw to reach arr service APIs"
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: openclaw
---
# Egress: implicit deny model. Any endpoint with an egress rule denies all
# other egress by default in Cilium, so we don't need egressDeny.
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: arr-egress
  namespace: arr
spec:
  description: "Default egress rules for all arr pods"
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: arr
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toCIDR:
        - 192.168.1.158/32
      toPorts:
        - ports:
            - port: "2049"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: openclaw
      toPorts:
        - ports:
            - port: "18789"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: arr-egress-vpn
  namespace: arr
spec:
  description: "Allow Gluetun VPN sidecar full internet access for VPN tunnels"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: arr-vpn-downloads
  egress:
    - toEntities:
        - world
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: arr-egress-media-operator
  namespace: arr
spec:
  description: "Allow media-operator to watch its CRs on the Kubernetes API"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: media-operator
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: arr-allow-auth-outpost
  namespace: arr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: arr-tdarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: auth
      toPorts:
        - ports:
            - port: "8265"
              protocol: TCP
